--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
+    "passport-cookie": "^1.0.9",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
