fix edit course,chapter,lesson

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "express-session": "^1.17.1",
+    "jquery-validation": "^1.19.3",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.4.1",
     "passport-cookie": "^1.0.9",
